examples/apps/compile_fails/src/app1.app.src
{application, compile_fails,
 [
  {description, ""},
  {vsn, "1"},
  {registered, []},
  {applications, [
                  kernel,
                  stdlib
                 ]},
  {mod, { compile_fails_app, []}},
  {env, []}
 ]}.
